--- a/css/style.css
+++ b/css/style.css
@@ -4,75 +4,93 @@
                                                     text-align: center;
                                                 }
                                                 
-                                            
+                                                .container {
+                                                    width: 800px;
+                                                    height: 370px;
+                                                    background: #37013a;
+                                                    color: #af3dff;
+                                                    position: absolute;
+                                                    transform: translate(-50%, -50%);
+                                                    top: 40%;
+                                                    left: 50%;
+                                                }
+                                                
+                                                .robot {
+                                                    font-size: 90px;
+                                                    margin-bottom: 30px;
+                                                }
+                                                
+                                                .top-container {
+                                                    text-align: center;
+                                                    height: 50px;
+                                                    background: #af3dff;
+                                                    color: #37013a;
+                                                    font-size: 24px;
+                                                    line-height: 50px;
+                                                }
+                                                
+                                                .mid-container {
+                                                    height: 270px;
+                                                    line-height: 270px;
+                                                }
+                                                
+                                                .hours,
+                                                .minutes,
+                                                .seconds {
+                                                    float: left;
+                                                    width: 23%;
+                                                    text-align: center;
+                                                    font-size: 100px;
+                                                }
+                                                
+                                                .miliseconds {
+                                                    float: left;
+                                                    width: 23%;
+                                                    text-align: center;
+                                                    font-size: 50px;
+                                                    color: #af3dff;
+                                                }
+                                                
+                                                .colon {
+                                                    float: left;
+                                                    font-size: 30px;
+                                                }
+                                                
+                                                .bottom-container {
+                                                    text-align: center;
+                                                    font-size: 20px;
+                                                    color: #af3dff;
+                                                }
+                                                
+                                                .date {
+                                                    width: 33%;
+                                                    float: left;
+                                                    text-align: right;
+                                                }
+                                                
+                                                .month {
+                                                    width: 33%;
+                                                    float: left;
+                                                    text-align: center;
+                                                }
+                                                
+                                                .year {
+                                                    width: 15%;
+                                                    float: left;
+                                                    text-align: left;
+                                                }
+                                                
+                                                @media screen and (max-width: 768px) {
                                                     .container {
-                                                        width: 800px;
+                                                        width: 100%;
                                                         height: 370px;
                                                         background: #37013a;
                                                         color: #af3dff;
                                                         position: absolute;
                                                         transform: translate(-50%, -50%);
-                                                        top: 50%;
+                                                        top: 40%;
                                                         left: 50%;
                                                     }
-                                                    .robot {
-                                                        font-size: 90px;
-                                                        margin-bottom: 30px;
-                                                    }
-                                                    .top-container {
-                                                        text-align: center;
-                                                        height: 50px;
-                                                        background: #af3dff;
-                                                        color: #37013a;
-                                                        font-size: 24px;
-                                                        line-height: 50px;
-                                                    }
-                                                    .mid-container {
-                                                        height: 270px;
-                                                        line-height: 270px;
-                                                    }
-                                                    .hours,
-                                                    .minutes,
-                                                    .seconds {
-                                                        float: left;
-                                                        width: 23%;
-                                                        text-align: center;
-                                                        font-size: 100px;
-                                                    }
-                                                    .miliseconds {
-                                                        float: left;
-                                                        width: 23%;
-                                                        text-align: center;
-                                                        font-size: 50px;
-                                                        color: #af3dff;
-                                                    }
-                                                    .colon {
-                                                        float: left;
-                                                        font-size: 30px;
-                                                    }
-                                                    .bottom-container {
-                                                        text-align: center;
-                                                        font-size: 20px;
-                                                        color: #af3dff;
-                                                    }
-                                                    .date {
-                                                        width: 33%;
-                                                        float: left;
-                                                        text-align: right;
-                                                    }
-                                                    .month {
-                                                        width: 33%;
-                                                        float: left;
-                                                        text-align: center;
-                                                    }
-                                                    .year {
-                                                        width: 15%;
-                                                        float: left;
-                                                        text-align: left;
-                                                    }
-                                                
-                                                
-                                                @media screen and (max-width: 768px) {
                                                     .container {
                                                         width: 100%;
                                                         height: auto;
@@ -83,7 +101,7 @@
                                                         font-size: 50px;
                                                     }
                                                     .robot {
-                                                        font-size: 40px;
+                                                        font-size: 60px;
                                                     }
                                                     .miliseconds {
                                                         font-size: 20px;
